# librarian

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile.agent  LICENSE  README.md
.github/workflows/: release.yml
docs/: architecture.md  bootstrap-windows.md  memory.md  roadmap.md  security.md  self-hosting-readiness.md  third-eye.md
docs/tasks/: 2026-06-14-01-admin-modularization.md  2026-06-14-02-review-approval-ux.md  2026-06-14-03-provider-settings-flows.md  2026-06-14-04-pricing-profiles.md  2026-06-14-05-admin-auth.md  2026-06-14-06-prompt-builder-ui.md  2026-06-14-07-self-host-readiness-refresh.md  2026-06-14-08-post-run-review-packet.md  2026-06-14-09-self-host-smoke-review-mode.md  2026-06-14-10-roadmap-self-host-sync.md  2026-06-14-11-self-host-review-test-gate.md  2026-06-14-12-self-host-source-workspace.md  2026-06-14-13-self-host-workspace-collision.md  2026-06-14-14-admin-bind-default-repair.md  2026-06-14-15-project-tool-proposal-aliases.md  2026-06-15-16-agent-launch-tool-proposals.md  2026-06-15-17-daemon-lifecycle.md  2026-06-15-18-job-diagnostics-and-approval-state.md
scripts/: bootstrap-ubuntu.sh  bootstrap-windows.ps1  install-ubuntu.sh  librarian-launcher.ps1
src/: admin.rs  admin_models.rs  admin_ui.rs  agent_policy.rs  broker.rs  chat.rs  config.rs  daemon.rs  db.rs  docker_runner.rs  domain.rs  gates.rs  git_proxy.rs  job_review.rs  library_tools.rs  main.rs  memory.rs  memory_policy.rs  prompt.rs  provider_health.rs  router.rs  scheduler.rs  secrets.rs  service.rs  slash_utils.rs  third_eye.rs  vault.rs  worker.rs
src/admin/: smoke.rs  (+3 more)
(+5 files in other folders)
