[package]
name = "librarian"
version = "0.2.13"
edition = "2021"
license = "MIT"
description = "A local-first agent harness for project work, memory, scheduling, and containerized coding agents."
repository = "https://github.com/smart-lib/librarian"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
aes-gcm = "0.10"
base64 = "0.22"
bollard = "0.20"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
